tests/metatype/typedesc_as_value.nim
discard """
  errormsg: "'typedesc' metatype is not valid here; typed '=' instead of ':'?"
"""


var x = int

echo x



